# boxing_robot_ws

./: CLAUDE.md  README.md  environment.yml  pyproject.toml
action_prediction/: README.md  live_voxelflow_inference.py  run.py
action_prediction/lib/: fusion_model.py  inference_runtime.py
config/: boxbunny.yaml  llm_models.yaml  ros_topics.yaml
data/: combos_template.db  reaction_drill_sessions.csv
data/reaction_drill/: reaction_drill_log.csv
docs/: README.md  architecture.md  cv_imu_fusion_pipeline.dot  cv_pipeline.md  dashboard_and_llm.md  deployment.md  gui_and_user_experience.md  gui_dashboard_communication.dot  new_changes.md  ros_node_graph.dot  session_state_machine.dot  sparring_and_training.md  teensy_simulator.md  testing.md  testing_and_notebook.md
docs/dashboard/: backend.md  frontend.md
docs/data/: schema.md
docs/gui/: architecture.md  design-system.md
docs/node_graphs/: CV_IMU_FUSION_PIPELINE_REFERENCE.md  GUI_DASHBOARD_COMMUNICATION_REFERENCE.md  SESSION_STATE_MACHINE_REFERENCE.md  SYSTEM_ARCHITECTURE_REFERENCE.md
docs/system/: architecture.md  integration.md  technical-deep-dive.md
docs/training/: modes.md
notebooks/: boxbunny_runner.ipynb  deployment.ipynb  unit_tests.ipynb
notebooks/scripts/: _cv_runner.sh  _imu_terminal.sh  _v4_gui_launcher.sh  build_frontend.sh  build_setup.sh  dashboard_tunnel.py  (+18 more)
scripts/: download_models.sh  generate_all_assets.sh  generate_icons.py  generate_sounds.py  setup.sh
tests/: conftest.py
tools/: dashboard_server.py  demo_data_seeder.py  imu_simulator.py  llm_chat_gui.py  teensy_simulator.py
(+175 files in other folders)
